# EnvMCP

./: README.md  main.py  pyproject.toml
env_mcp/: server.py
